# my-notes

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-09.jsonl  2026-07-12.jsonl
src/mynotes/: capture.py  cli.py  tag.py
tests/: test_capture.py  test_cli.py  test_tag.py
